--- a/index.css
+++ b/index.css
@@ -5,14 +5,14 @@ html {
 
 body {
   font-family: 'Trebuchet MS';
-  background-color: #212121;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
 }
 .topnavbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #333333;
+  background-color: #f5f5f5;
   height: 96px;
   border-radius: 17px;
 }
