--- a/index.css
+++ b/index.css
@@ -17,23 +17,6 @@ body {
   border-radius: 17px;
 }
 
-.logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 17px;
-  margin-right: 10px;
-  transition: all 0.6s;
-}
-
-.logo:hover {
-  transform: scale(1.1);
-}
-
-.logo:active {
-  transform: scale(0.9);
-}
-
 a {
   text-decoration: none;
   color: #fff;
@@ -50,10 +33,16 @@ a:active {
   transform: scale(0.9)
 }
 
-.ContactButtonTNB {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 10px
+input[type=submit]{
+  color: #fff;
+  background-color: #62c2ff;
+  border: none;
+  border-radius: 13px;  
+}
+input[type=submit]:hover{
+  transform: scale(1.1);
 }
 
+input[type=submit]:active{
+  transform: scale(0.9);
+}
